--- a/src/pages/dashboard/dashboard.component.html
+++ b/src/pages/dashboard/dashboard.component.html
@@ -1,1 +1,35 @@
-<p>dashboard works!</p>
+<div class="container">
+  <div class="title-animation">
+    For any queries, contact us at 8080021333 or via email at
+    {{ "info@applestationers.com" }}. Support time from 10:30 am to 5:00 pm
+    (Monday to Saturday)
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="data">
+   @for (item of items; track $index) {
+    <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-title> Australian Shepherd</mat-card-title>
+          <mat-card-subtitle>Herding group</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-actions>
+          <button mat-button>Learn More</button>
+        </mat-card-actions>
+      </mat-card>
+      <br>
+      <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-title>Poodle</mat-card-title>
+          <mat-card-subtitle>Non-sporting group</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-actions align="end">
+          <button mat-button>Learn More</button>
+        </mat-card-actions>
+      </mat-card>
+      
+   }
+  </div>
+</div>
