--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -5,3 +5,5 @@ $carat: "data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOCIgdmlld0Jve
 $btnSmallColor: #054272;
 $borderColor: #ccc;
 $titleAnimationColor: #a94343;
+// $sidebarBackgroundColor: #0057a1;
+$sidebarBackgroundColor: #8174A0;
