--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -1,9 +1,14 @@
 $bodyBackgroundColor: #eff1f3;
-$tableHeaderColor: #fff;
-$tableHeaderBackgroundColor: #555;
+$tableHeaderColor: #555;
+$tableHeaderBackgroundColor: #fff;
 $carat: "data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEyIDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZmlsbD0iIzMzMyIgZD0iTTAgMGw2IDYgNi02eiIvPjwvc3ZnPg==";
-$btnSmallColor: #054272;
-$borderColor: #ccc;
+$btnSmallColor: #1abefb;
+$borderColor: #ebe1e1;
 $titleAnimationColor: #a94343;
 // $sidebarBackgroundColor: #0057a1;
-$sidebarBackgroundColor: #8174A0;
+// $sidebarBackgroundColor: #343957;
+$sidebarBackgroundColor: #1c0f54;
+$sideMenuUnselectColor: #759bba;
+// $sideMenuUnselectColor: #bdbdc7;
+// $sideMenuUnselectColor: #bfbfbf;
+// $sideMenuUnselectColor: #555;
