--- a/src/components/layout/layout.component.scss
+++ b/src/components/layout/layout.component.scss
@@ -1,93 +1,139 @@
 @use "../../constants/colors.scss" as color;
 
 .toolbar {
-    height: 70px;
-    width: 100%;
+  height: 70px;
+  width: 100%;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  position: relative;
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 15px 0px #ccc;
+
+  background-color: #fff;
+  padding: 0 25px 0 10px;
+
+  h3 {
+    margin: 0;
+    font-weight: 500;
+  }
+
+  .header {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #ccc;
-  
-    background-color: #fff;
-    padding: 0 25px;
-  
-    h3 {
-      margin: 0;
-      font-weight: 500;
+    .app-logo {
+      width: 50px;
+      height: 50px;
+    }
+    .app-title {
+      width: 200px;
+      height: 30px;
+      margin-top: 10px;
+    }
+    button {
+      margin: 5px 0 0 15px;
+      border-radius: 5px;
+      color: color.$sidebarBackgroundColor;
     }
   }
-  
+
   .spacing {
     flex: 1 1 auto;
   }
-  
-  .body {
-    display: flex;
-    height: calc(100vh - 70px);
-    overflow: hidden;
-  }
-  
-  .sidebar {
-    height: 100%;
+
+  .user {
     display: flex;
     align-items: center;
-    border-right: 1px solid #ccc;
-    overflow: hidden;
-    background-color: color.$sidebarBackgroundColor;
-    color: #fff;
-    font-family: ROBOTO-MEDIUM;
-
-    >mat-icon{
-      font-family: ROBOTO-THIN;
+    mat-icon {
+      font-size: 1.5rem;
     }
-
-    transition: width 0.4s ease-in-out;
-  }
-  
-  .content {
-    width: calc(100vw - 80px);
-    height: 100%;
-    overflow: auto;
-    padding: 20px;
-  }
-  
-  .sidemenus {
-    height: calc(100vh - 70px);
-    padding: 15px;
-  }
-  
-  .center {
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-    padding: 5px 10px;
-  
+    .username {
+      margin-right: 5px;
+      font-family: ROBOTO-MEDIUM;
+    }
     &:hover {
-      background-color: #ccc;
       cursor: pointer;
-      border-radius: 5px;
     }
   }
-  
-  .label {
-    font-size: medium;
-    font-weight: 500;
-    margin: 0 15px 0 10px;
-    white-space: nowrap;
-  }
-  
-  .f-1 {
-    font-size: 0.9rem;
-  }
-  
-  .submenu {
-    margin-left: 15px;
-  }
-  
-  .submenusmenu {
-    margin-left: 45px;
-  }
-  
+}
 
-  .selected{
-    color: #555;
+.body {
+  display: flex;
+  height: calc(100vh - 70px);
+  overflow: hidden;
+}
+
+.sidebar {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  border-right: 5px solid #a294f9;
+  overflow: hidden;
+  background-color: color.$sidebarBackgroundColor;
+  color: #fff;
+  font-family: ROBOTO-MEDIUM;
+  transition: width 0.4s ease-in-out;
+}
+
+.breadcrumb{
+  height: 50px;
+  width: 100%;
+  border-radius: 5px 5px 0 0;
+  display: flex;
+  align-items: center;
+  padding: 0 25px;
+  font-family: ROBOTO-MEDIUM;
+  font-weight: 400;
+  color: color.$sidebarBackgroundColor;
+}
+
+.content {
+  width: calc(100vw - 80px);
+  height: 100%;
+  overflow: auto;
+  background-color: color.$bodyBackgroundColor;
+  padding: 20px 40px;
+}
+
+.sidemenus {
+  height: calc(100vh - 70px);
+  padding: 15px;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  padding: 5px 10px;
+  color: color.$sideMenuUnselectColor;
+
+  &:hover {
+    color: #fff;
+    cursor: pointer;
   }
+}
+
+.label {
+  font-size: medium;
+  font-weight: 500;
+  margin: 0 15px 0 10px;
+  white-space: nowrap;
+}
+
+.f-1 {
+  font-size: 0.9rem;
+}
+
+.submenu {
+  margin-left: 15px;
+}
+
+.submenusmenu {
+  margin-left: 45px;
+}
+
+.selected {
+  color: #fff;
+}
