--- a/src/pages/dashboard/dashboard.component.scss
+++ b/src/pages/dashboard/dashboard.component.scss
@@ -10,7 +10,7 @@
   display: inline-block;
   white-space: nowrap;
   position: relative;
-  animation: moveLeft 50s linear infinite;
+  // animation: moveLeft 50s linear infinite;
 }
 
 
