--- a/src/components/layout/layout.component.html
+++ b/src/components/layout/layout.component.html
@@ -10,8 +10,18 @@
         </div>
         <div class="spacing"></div>
         <div class="user">
-            <span class="username">Livingston Vijayakumar</span>
+            <span class="username" [matMenuTriggerFor]="menu">Livingston Vijayakumar</span>
             <mat-icon>person</mat-icon>
+            <mat-menu #menu="matMenu" yPosition="below">
+                <button mat-menu-item>
+                  <mat-icon>person_edit</mat-icon>
+                  <span class="options">Update Profile</span>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>logout</mat-icon>
+                  <span class="options">Logout</span>
+                </button>
+              </mat-menu>
         </div>
     </div>
     <div class="body">
@@ -69,7 +79,6 @@
             </div>
         </div>
         <div class="content">
-            <div class="breadcrumb">{{title()}}</div>
             <router-outlet></router-outlet>
         </div>
     </div>
