--- a/src/pages/master/aos-user/user-master/edit-user-master/edit-user-master.component.scss
+++ b/src/pages/master/aos-user/user-master/edit-user-master/edit-user-master.component.scss
@@ -1,9 +1,9 @@
 @use "../../../../../constants/colors.scss" as color;
 
 .container {
-  width: 80%;
-  margin: 25px auto;
-  //   background-color: color.$bodyBackgroundColor;
+  width: 100%;
+  background-color: #fff;
+  padding: 50px;
 }
 
 .form-row {
@@ -23,7 +23,7 @@ mat-form-field {
   justify-content: flex-start;
   justify-content: flex-start;
   margin-right: 10px;
-  
+
   button {
     margin: 5px;
   }
@@ -37,6 +37,10 @@ mat-form-field {
     margin-left: 15px;
     cursor: pointer;
   }
+}
+
+button {
+  font-family: ROBOTO-MEDIUM;
 }
 
 @media (max-width: 768px) {
