--- a/src/components/layout/layout.component.scss
+++ b/src/components/layout/layout.component.scss
@@ -36,6 +36,7 @@
       margin: 5px 0 0 15px;
       border-radius: 5px;
       color: color.$sidebarBackgroundColor;
+      color: #76838F;
     }
   }
 
@@ -46,17 +47,27 @@
   .user {
     display: flex;
     align-items: center;
+    margin-top: 20px;
     mat-icon {
       font-size: 1.5rem;
+      color: #76838F;
     }
+
     .username {
       margin-right: 5px;
       font-family: ROBOTO-MEDIUM;
+      color: #76838F;
     }
+
     &:hover {
       cursor: pointer;
     }
   }
+}
+
+.options {
+  font-family: ROBOTO-MEDIUM;
+  font-weight: 400;
 }
 
 .body {
@@ -75,18 +86,6 @@
   color: #fff;
   font-family: ROBOTO-MEDIUM;
   transition: width 0.4s ease-in-out;
-}
-
-.breadcrumb{
-  height: 50px;
-  width: 100%;
-  border-radius: 5px 5px 0 0;
-  display: flex;
-  align-items: center;
-  padding: 0 25px;
-  font-family: ROBOTO-MEDIUM;
-  font-weight: 400;
-  color: color.$sidebarBackgroundColor;
 }
 
 .content {
