--- a/src/components/paginator/paginator.component.scss
+++ b/src/components/paginator/paginator.component.scss
@@ -17,11 +17,14 @@
 
   .title {
     margin: 0 25px;
-    padding: 5px 15px;
+    padding: 2.5px 10px;
+    font-size: 0.85rem;
+    display: flex;
+    align-items: center;
   }
 
   button {
-    padding: 10px;
+    padding: 5px;
     font-size: medium;
     font-weight: 500;
     margin: 0 5px;
@@ -30,7 +33,7 @@
   }
 
   button.page {
-    font-size: large;
+    font-size: 1rem;
     border-radius: 50%;
   }
 
