--- a/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.html
+++ b/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.html
@@ -1,6 +1,10 @@
 <div class="container">
   <form [formGroup]="form" (ngSubmit)="submit()">
-    <div class="form-row">
+    <div class="input-field">
+      <label for="First Name">First Name<span class="imp">*</span></label>
+      <input type="text" class="input-txt">
+    </div>
+    <!-- <div class="form-row">
       <mat-form-field appearance="outline">
         <mat-label>First Name</mat-label>
         <input matInput formControlName="firstName" />
@@ -41,12 +45,12 @@
         <mat-label>Confirm Password</mat-label>
         <input matInput formControlName="confirmPassword" />
       </mat-form-field>
-    </div>
-    <div class="form-row">
+    </div> -->
+    <!-- <div class="form-row">
       <button mat-flat-button type="submit">Submit</button>
-      <button mat-button type="button" (click)="navigateToListUserPage()">
+      <button mat-button type="button" style="color: red;padding: 0 20px;" (click)="navigateToListUserPage()">
         Cancel
       </button>
-    </div>
+    </div> -->
   </form>
 </div>
