--- a/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.scss
+++ b/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.scss
@@ -1,9 +1,9 @@
 @use "../../../../../constants/colors.scss" as color;
 
 .container {
-  width: 80%;
-  margin: 25px auto;
-  //   background-color: color.$bodyBackgroundColor;
+  width: 100%;
+  background-color: #fff;
+  padding: 50px;
 }
 
 .form-row {
@@ -23,7 +23,7 @@ mat-form-field {
   justify-content: flex-start;
   justify-content: flex-start;
   margin-right: 10px;
-  
+
   button {
     margin: 5px;
   }
@@ -42,5 +42,40 @@ mat-form-field {
 @media (max-width: 768px) {
   .form-row mat-form-field {
     flex: 1 1 100%;
+  }
+}
+
+.input-field {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  
+  line-height: 1.5;
+  color: #495057;
+  background-clip: padding-box;
+  font-family: ROBOTO-LIGHT;
+  font-weight: 200;
+
+  label{
+    font-size: 0.875rem;
+    margin-bottom: 5px;
+  }
+
+  input {
+    width: 100%;
+    height: calc(2.0625rem + 2px);
+    padding: 0.375rem 0.75rem;
+    border: 1px solid #CED4DA;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+
+  input:focus{
+    outline-color: #abc7ff;
+  }
+
+  .imp{
+    color: red;
+    margin-left: 5px;
   }
 }
