--- a/src/pages/master/aos-user/user-master/edit-user-master/edit-user-master.component.html
+++ b/src/pages/master/aos-user/user-master/edit-user-master/edit-user-master.component.html
@@ -33,8 +33,8 @@
         </mat-form-field>
       </div>
       <div class="form-row">
-        <button mat-flat-button type="submit">Submit</button>
-        <button mat-button type="button" (click)="navigateToListUserPage()">
+        <button mat-flat-button type="submit">Update</button>
+        <button mat-button type="button" style="color: red;padding: 0 20px;" (click)="navigateToListUserPage()">
           Cancel
         </button>
       </div>
