--- a/src/pages/master/aos-user/user-master/list-user-master/list-user-master.component.html
+++ b/src/pages/master/aos-user/user-master/list-user-master/list-user-master.component.html
@@ -1,73 +1,1 @@
-<div class="container">
-  <header>
-    <div class="center">
-      <select (change)="onSelectRow($event)">
-        @for (row of rows; track row) {
-        <option [value]="row">{{ row }}</option>
-        }
-      </select>
-    </div>
-    <div class="center">
-      <button mat-flat-button class="btn-sm" (click)="navigateToCreateUser()"><mat-icon>add</mat-icon>Add User</button>
-      <div class="input-container">
-        <input type="text" placeholder="Enter search term ..." />
-        <button mat-icon-button class="search">
-          <mat-icon>search</mat-icon>
-        </button>
-      </div>
-    </div>
-  </header>
-  <br />
-  <div class="body">
-    <div class="data">
-      <table>
-        <thead>
-          <tr>
-            <th>S.No.</th>
-            <th>First Name</th>
-            <th>Middle Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Mobile No</th>
-            <th>Role</th>
-            <th>Date Added</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          @for (item of items; track $index) {
-          <tr class="row-data">
-            <td>{{ $index + 1 + offset() * limit() }}.</td>
-            <td>{{ item.firstName }}</td>
-            <td>{{ item.middleName }}</td>
-            <td>{{ item.lastName }}</td>
-            <td>{{ item.email }}</td>
-            <td>{{ item.mobileNo }}</td>
-            <td>{{ item.role }}</td>
-            <td>{{ item.saveDt }}</td>
-            <td>
-              <!-- <button mat-icon-button (click)="viewCategory(item.id)">
-                  <mat-icon>visibility</mat-icon>
-                </button> -->
-              <button mat-icon-button (click)="editUser(item.id)">
-                <mat-icon style="color: #005cbb;" fontSet="material-icons-outlined">edit_note</mat-icon>
-              </button>
-              <button mat-icon-button (click)="deleteCategory(item.id)">
-                <mat-icon style="color: red;" fontSet="material-icons-outlined">delete</mat-icon>
-              </button>
-            </td>
-          </tr>
-          }
-        </tbody>
-      </table>
-    </div>
-    <div class="paginator">
-      @if(items.length){
-      <app-paginator (page)="navigate($event)" [size]="size" [records]="records" [from]="from()"
-        [to]="to()"></app-paginator>
-      } @else {
-      <h2>No Data in the table...</h2>
-      }
-    </div>
-  </div>
-</div>
+<app-table [headers]="headers" [addBtnTxt]="addBtnTxt" [module]="module"></app-table>
