--- a/src/components/layout/layout.component.scss
+++ b/src/components/layout/layout.component.scss
@@ -36,7 +36,7 @@
       margin: 5px 0 0 15px;
       border-radius: 5px;
       color: color.$sidebarBackgroundColor;
-      color: #76838F;
+      color: color.$iconColor;
     }
   }
 
