--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -9,3 +9,4 @@ $titleAnimationColor: #a94343;
 // $sidebarBackgroundColor: #343957;
 $sidebarBackgroundColor: #1c0f54;
 $sideMenuUnselectColor: #759bba;
+$iconColor: #76838f;
