--- a/src/pages/master/aos-user/user-master/edit-user-master/edit-user-master.component.scss
+++ b/src/pages/master/aos-user/user-master/edit-user-master/edit-user-master.component.scss
@@ -3,48 +3,165 @@
 .container {
   width: 100%;
   background-color: #fff;
-  padding: 50px;
-}
-
-.form-row {
+  padding: 10px 50px 25px;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+
+  form {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
 }
 
-mat-form-field {
-  flex: 1 1 calc(50% - 8px);
-  max-width: 300px;
+h3 {
+  font-family: ROBOTO-MEDIUM;
+  font-weight: 400;
+  color: #76838f;
 }
 
-.flex {
+.input-field {
+  flex: 1 1 calc(33.333% - 20px);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  justify-content: flex-start;
-  margin-right: 10px;
+  color: #495057;
+  font-family: ROBOTO-LIGHT;
 
-  button {
-    margin: 5px;
+  label {
+    font-size: 0.875rem;
+    margin: 15px 0 5px;
   }
 
-  p {
-    margin: 0;
+  input,
+  select {
+    height: calc(2.0625rem + 2px);
+    padding: 0.375rem 0.75rem;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    background-color: #fff;
+    color: #495057;
   }
 
-  .remove {
+  input:focus,
+  select:focus {
+    outline-color: #abc7ff;
+  }
+
+  select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNCIgaGVpZ2h0PSIxNCIgdmlld0JveD0iMCAwIDE0IDE0Ij48cGF0aCBkPSJNMiA1bDYgNiA2LTZ6IiBmaWxsPSIjNTE1MTUxIi8+PC9zdmc+");
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 12px;
+  }
+
+  .imp {
     color: red;
-    margin-left: 15px;
-    cursor: pointer;
+    margin-left: 5px;
   }
 }
 
-button {
-  font-family: ROBOTO-MEDIUM;
+.input-field {
+  display: flex;
+  flex-direction: column;
+
+  label {
+    font-size: 0.875rem;
+    margin: 25px 0 5px;
+  }
+
+  .input-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    input {
+      flex: 1;
+      height: calc(2.0625rem + 2px);
+      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
+      border: 1px solid #ced4da;
+      border-radius: 0.25rem;
+      font-size: 1rem;
+    }
+
+    .toggle-password {
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      cursor: pointer;
+
+      mat-icon {
+        font-size: 1.5rem;
+        color: color.$iconColor;
+      }
+    }
+  }
+}
+
+.action-btns {
+  display: flex;
+  justify-content: flex-end;
+  gap: 25px;
+  margin: 25px 0;
+
+  button {
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    font-family: ROBOTO-LIGHT;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    &[type="submit"] {
+      background-color: #007bff;
+      color: white;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+
+    &[type="button"] {
+      background-color: #f8f9fa;
+      color: #495057;
+      border: 1px solid #ced4da;
+
+      &:hover {
+        background-color: #e2e6ea;
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+
+    button {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .input-field {
+    flex: 1 1 calc(50% - 20px);
+  }
 }
 
 @media (max-width: 768px) {
-  .form-row mat-form-field {
-    flex: 1 1 100%;
+  .input-field {
+    flex: 1 1 calc(100% - 20px);
+  }
+
+  .container {
+    padding: 20px;
   }
 }
